--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                         <div class="grid grid-cols-2 ">
                             <div class="h-40">
-                                <video width="300" height="200" controls loop autoplay>
+                                <video width="300" height="200" controls loop autoplay muted>
                                     <source src="nishtha.mp4" type="video/mp4">
 
                             </div>
