--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <!-- Main Content -->
 <div class="main-content">
 <div>
-    <img src="ChatGPT.png" flex-mx-auto>
+    <img src="ChatGPT.png" flex-mx-auto width="100%">
 </div>
 
 
